--- a/Portfolio/css/main.css
+++ b/Portfolio/css/main.css
@@ -1,22 +1,22 @@
 ﻿#home{
     height:2000px;
-    padding:inherit;
+    padding-top:50px;
 }
 #about{
-    height: 1500px;
-    padding:inherit;
+    height:inherit;
+    padding-top:50px;
 }
 
 #projects{
     height: 1500px;
-    padding:inherit;
+    padding-top:50px;
 }
 #services{
     height: 1500px;
-    padding:inherit;
+    padding-top:50px;
 }
 #contact{
     height: 1500px;
-    padding:inherit;
+    padding-top:50px;
 }
 
